Fixed overflow

--- a/src/components/typeahead/typeahead.component.less
+++ b/src/components/typeahead/typeahead.component.less
@@ -24,6 +24,8 @@ ux-typeahead {
 
     ux-typeahead-options-list {
         display: block;
+        width: 100%;
+        overflow-x: hidden;
 
         + ux-typeahead-options-list {
             padding-top: 8px;
